CargoArgs#fromAllArguments(String...) instead of String[]
Simplify tests based on that.
Other cleanups to tests while at them.